Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122182

Surface graph selected point is incorrect in polar mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.0 Beta3, 6.8.0 FF
    • 6.7, 6.8
    • Graphs: 3D
    • None
    • 8d502cee9 (dev), 2898d790f (6.7)

      Visibile in surface gallery: 

      • Select spectrogram graph
      • Switch to polar
      • pick a point
      • check point position in perspective view

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            spouke Sakaria Pouke
            spouke Sakaria Pouke
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes