Fix incorrect point placement in polar graph

Fixes: QTBUG-122182
Change-Id: Ic7f4b70bb227c5c80546f453c6cffe37cc2420e6
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 8d502cee98e55c0115066211adb967dc63144d79)